# Google_AI_CLI

./: Cargo.toml  LICENSE  README.md
src/: api.rs  main.rs  utils.rs
src/models/: request.rs  response.rs
