[package]
name = "google-ai-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["cargo"] }
colored = "2.1.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }

[profile.release]
opt-level = 'z' 
lto = true
codegen-units = 1
panic = 'abort'
strip = true
incremental = false
